# qemu-debug

./: .gitignore  README.md  cpu_pin.sh  pyproject.toml  qemu-cli.py  qemu-debug.py  ruff.toml
lib/: cmd.py  file.py  qemu.py  qmp.py
lib/cli/: query_cpus_fast.py  query_stats.py  query_stats_schemas.py
lib/cli/cpu/: __init__.py  cpu_load.py  cpu_pin.py  load.py  pin.py
lib/cli/qmp/: __init__.py  query_blockstats.py  query_cpus_fast.py  query_stats.py  query_stats_schemas.py
