[project]
name = "qemu-debug"
version = "0.1.0"
description = "QEMU DEBUG TOOLS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "click>=8.2.1",
    "click-params>=0.5.0",
    "pandas>=2.3.1",
    "prettytable>=3.16.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "qemu-qmp>=0.0.3",
]
